[project]
name = "ugglan-tools"
description = "The Ugglan development tools"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.7.1",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scipy==1.10.1",
    "pyqtgraph==0.13.3",
    "PyQt6==6.4.1",
    "PyOpenGL==3.1.6",
    "inputs==0.5",
    "sympy==1.12",
    "pyzmq==25.1.0",
    "plotly==5.15.0",
    "dash==2.10.2"
]

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
plot-data-log = "ugglan_tools.data_log.plot:main"
plot-multi-body = "ugglan_tools.multi_body_sim.plot_drone:main"
plot-att-est = "ugglan_tools.attitude_est.plot:main"
plot-hard-iron-bias = "ugglan_tools.misc_scripts.hard_iron_bias:main"
plot-motor-dynamics = "ugglan_tools.misc_scripts.motor_dynamics:main"
plot-motor-thrust = "ugglan_tools.misc_scripts.motor_thrust:main"
plot-motor-vibrations = "ugglan_tools.misc_scripts.motor_vibrations:main"
est-acc-static-errors = "ugglan_tools.misc_scripts.acc_static_errors:main"
gui-linear-sim = "ugglan_tools.linear_sim.gui:main"
gui-6dof-sim = "ugglan_tools.non_linear_sim.gui:main"
gui-filter-design = "ugglan_tools.filter_design.gui:main"
gui-streamer = "ugglan_tools.streamer.gui:main"

[project.optional-dependencies]
test = [
    "pytest==7.3.2"
]

[tool.setuptools_scm]
root="../"
