[metadata]
name = ugglan-tools
version = 0.0.1
description = The Ugglan development tools

[options]
packages = find:
python_requires = >=3.7
install_requires =
    dataclasses
    matplotlib
    numpy
    pandas
    scipy
    pyqtgraph
    PyQt5
    PyOpenGL
    inputs

[options.entry_points]
console_scripts =
    plot-data-log = data_log.plot:main
    plot-multi-body = multi_body_sim.plot_drone:main
    plot-att-est = attitude_est.plot:main
    plot-hard-iron-offset = misc_scripts.hard_iron_offset:main
    plot-motor-dynamics = misc_scripts.motor_dynamics:main
    plot-motor-thrust = misc_scripts.motor_thrust:main
    plot-motor-vibrations = misc_scripts.motor_vibrations:main
    gui-linear-sim = linear_sim.gui:main
    gui-6dof-sim = non_linear_sim.gui:main
    gui-filter-design = filter_design.gui:mai

[options.extras_require]
test = pytest
