[metadata]
name = ugglan-tools
version = 0.0.1
description = The Ugglan development tools

[options]
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    pandas
    scipy
    pyqtgraph
    PyQt6
    PyOpenGL
    inputs
    sympy

[options.entry_points]
console_scripts =
    plot-data-log = ugglan_tools.data_log.plot:main
    plot-multi-body = ugglan_tools.multi_body_sim.plot_drone:main
    plot-att-est = ugglan_tools.attitude_est.plot:main
    plot-hard-iron-offset = ugglan_tools.misc_scripts.hard_iron_offset:main
    plot-motor-dynamics = ugglan_tools.misc_scripts.motor_dynamics:main
    plot-motor-thrust = ugglan_tools.misc_scripts.motor_thrust:main
    plot-motor-vibrations = ugglan_tools.misc_scripts.motor_vibrations:main
    gui-linear-sim = ugglan_tools.linear_sim.gui:main
    gui-6dof-sim = ugglan_tools.non_linear_sim.gui:main
    gui-filter-design = ugglan_tools.filter_design.gui:main

[options.extras_require]
test = pytest
